--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ buildscript {
     
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        //jcenter()
         
     }
     dependencies {
@@ -19,8 +20,9 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-        
+        mavenCentral()
+        //jcenter()
+
     }
 }
 
