Menambahkan API Deteksi Mata pada halaman Main Pasien dan Mematikan Alert

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Daftar"></activity>
-        <activity android:name=".Pasien"></activity>
-        <activity android:name=".Alert"></activity>
+        <activity
+            android:name=".Pasien"
+            android:noHistory="true"></activity>
+        <activity
+            android:name=".Alert"
+            android:noHistory="true"></activity>
         <activity android:name=".MainActivity">
 
             <intent-filter>
