--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.bahasamata">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -26,9 +27,7 @@
         <activity android:name=".PasienlistActivity" />
         <activity android:name=".AlarmListActivity" />
         <activity android:name=".PengaturanActivity"/>
-        <activity
-            android:name=".Pasien"
-            android:noHistory="true" />
+        <activity android:name=".Pasien" />
         <activity
             android:name=".Alert"
             android:noHistory="true" />
